--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button id="next-btn" style="display:none;">Volgende vraag</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="data.js"></script>
 </body>
 </html>
+
