--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button id="next-btn" style="display:none;">Volgende vraag</button>
     </div>
 
-    <script src="data.js"></script>
+    <!-- ALLEEN dit script -->
+    <script src="script.js" defer></script>
 </body>
 </html>
-
